openshift/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: generarcredencialv3
  labels:
    app.kubernetes.io/name: generarcredencialv3
    app.kubernetes.io/part-of: generarcredencialv3
spec:
  selector:
    app.kubernetes.io/name: generarcredencialv3
  ports:
    - name: http
      port: 3345
      targetPort: http
