openshift/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/part-of: generarcredencialv3
spec:
  selector:
    app.kubernetes.io/name: postgresql
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
