openshift/api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: generarcredencialv3
  labels:
    app.kubernetes.io/name: generarcredencialv3
    app.kubernetes.io/part-of: generarcredencialv3
spec:
  to:
    kind: Service
    name: generarcredencialv3
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
